--- a/src/looper-page/looper-footer.html
+++ b/src/looper-page/looper-footer.html
@@ -7,7 +7,7 @@
       display: block;
       background-color: var(--google-grey-300);
       width: 100%;
-      color: var(--app-text-color-light)
+      color: var(--app-text-color-light);
       font-size: 14px;
     }
 
@@ -42,7 +42,7 @@
 
     .menus a {
       text-decoration: none;
-      color: var(--app-text-color-light)
+      color: var(--app-text-color-light);
     }
 
     .menus a:hover {
@@ -50,7 +50,7 @@
     }
 
     .copyright {
-      color: var(--app-text-color-light)
+      color: var(--app-text-color-light);
       padding-bottom: 0;
       font-size: 12px;
     }
