--- a/src/page-market.html
+++ b/src/page-market.html
@@ -26,7 +26,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
       --paper-card-header-text: {
         font-size: 18px;
-        color: var(--app-text-color-light)
+        color: var(--app-text-color-light);
       }
 
       --paper-tabs-selection-bar-color: var(--app-primary-color);
@@ -38,7 +38,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
       --paper-tab-content-unselected: {
         /*background-color: transparent;*/
-        color: var(--app-text-color-light)
+        color: var(--app-text-color-light);
       }
     }
 
