--- a/src/wallet/subpage-default.html
+++ b/src/wallet/subpage-default.html
@@ -10,7 +10,7 @@
       }
       --paper-card-header-text: {
         font-size: 18px;
-        color: var(--app-text-color-light)
+        color: var(--app-text-color-light);
       }
     }
 
