--- a/src/wallet/subpage-unlock.html
+++ b/src/wallet/subpage-unlock.html
@@ -11,7 +11,7 @@
       }
       --paper-card-header-text: {
         font-size: 18px;
-        color: var(--app-text-color-light)
+        color: var(--app-text-color-light);
       }
     }
 
