--- a/src/looper-page/signtosend-dialog.html
+++ b/src/looper-page/signtosend-dialog.html
@@ -29,7 +29,7 @@
     }
 
     .title {
-      color: var(--app-text-color-light)
+      color: var(--app-text-color-light);
       margin-bottom: 8px;
     }
 
