--- a/src/page-settings.html
+++ b/src/page-settings.html
@@ -34,7 +34,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     .label {
       min-width: 200px;
-      color: var(--app-text-color-light)
+      color: var(--app-text-color-light);
     }
 
     vaadin-combo-box {
